src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>BRI_Alimony_Amount__c</fullName>
        <label>Alimony Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Allen_Transfer__c</fullName>
        <label>Allen Transfer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Auto_Deduction_Plan__c</fullName>
        <label>Auto Deduction Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Business_Amount__c</fullName>
        <label>Business Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_Change__c</fullName>
        <label>Change</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_Referral_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Source</label>
        <referenceTo>Provider__c</referenceTo>
        <relationshipLabel>CPCS Referral</relationshipLabel>
        <relationshipName>CPCSReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_CPCS_Referral_Type__c</fullName>
        <label>Referral Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adult Probation</fullName>
                </value>
                <value>
                    <fullName>Community Agency</fullName>
                </value>
                <value>
                    <fullName>Department of Child Services</fullName>
                </value>
                <value>
                    <fullName>Faith Based Organization</fullName>
                </value>
                <value>
                    <fullName>Family / Neighbor</fullName>
                </value>
                <value>
                    <fullName>Healthy Families</fullName>
                </value>
                <value>
                    <fullName>Juvenile Probation</fullName>
                </value>
                <value>
                    <fullName>Legal System</fullName>
                </value>
                <value>
                    <fullName>Medical System</fullName>
                </value>
                <value>
                    <fullName>Mental Health Center</fullName>
                </value>
                <value>
                    <fullName>Other CPCS Region</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Self</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Change__c</fullName>
        <label>Change Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Child_Dental_Care_Source__c</fullName>
        <label>Child Dental Care Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Do not have ususal source of dental care</fullName>
                </value>
                <value>
                    <fullName>Have a ususal source of dental care</fullName>
                </value>
                <value>
                    <fullName>Prenatal Client</fullName>
                </value>
                <value>
                    <fullName>Unknown </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Child_Med_Care_Source__c</fullName>
        <label>Child Med Care Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Doctor/Nurse Practitioner</fullName>
                </value>
                <value>
                    <fullName>Federally Qualified Health Center</fullName>
                </value>
                <value>
                    <fullName>Hopsital ER</fullName>
                </value>
                <value>
                    <fullName>Hospital Outpatient</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other </fullName>
                </value>
                <value>
                    <fullName>Prenatal Client</fullName>
                </value>
                <value>
                    <fullName>Retail or Minute Clinic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Child_Support_Amount__c</fullName>
        <label>Child Support Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Composed_Id__c</fullName>
        <label>Composed Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Court_Ordered_Child_Support__c</fullName>
        <label>Court Ordered Child Support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Current_Family_Level__c</fullName>
        <label>Current Family Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>1C</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>SS</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>X1</fullName>
                </value>
                <value>
                    <fullName>X2</fullName>
                </value>
                <value>
                    <fullName>X3</fullName>
                </value>
                <value>
                    <fullName>UE</fullName>
                </value>
                <value>
                    <fullName>NS</fullName>
                </value>
                <value>
                    <fullName>1 B</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Current_Medicare_aid__c</fullName>
        <label>Current Medicare/ Aid</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_DCS_Program__c</fullName>
        <label>DCS Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPCS</fullName>
                </value>
                <value>
                    <fullName>HFI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Delete_Program_Admission_Date__c</fullName>
        <label>Delete Program Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Disability_Amount__c</fullName>
        <label>Disability Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Earn_Income_Amount__c</fullName>
        <label>Earn Income Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Encrypted_ID_String__c</fullName>
        <label>Encrypted ID String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Encrypted_ID__c</fullName>
        <label>Encrypted ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FAW_CR__c</fullName>
        <label>FAW CR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FAW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAW</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_FF_Amount__c</fullName>
        <label>FF Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_FLearn__c</fullName>
        <label>FLearn</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FMEB__c</fullName>
        <label>FMEB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FN_County_Code__c</fullName>
        <label>FN-County Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FN_County_Family_Resides__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FN- County Family Resides</label>
        <referenceTo>County__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_FN_Program_Within_County__c</fullName>
        <label>FN- Program Within County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FPhysical__c</fullName>
        <label>FPhysical</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FSW_CR__c</fullName>
        <label>FSW-CR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_FSW__c</fullName>
        <label>FSW</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Family_In_Target_Population__c</fullName>
        <label>Family In Target Population</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Family_Number__c</fullName>
        <label>Family Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Final_Funding_Source__c</fullName>
        <label>Final Funding Source</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Food_Stamps_Amount__c</fullName>
        <label>Food Stamps Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Formal_Inkind_Support_Amount__c</fullName>
        <label>Formal Inkind Support Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Funding_Source__c</fullName>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MIEC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>State HF</fullName>
                </value>
                <value>
                    <fullName>TANF/MOE</fullName>
                </value>
                <value>
                    <fullName>Title 20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_HOH_Citizen_Qualified_Alien__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HOH Citizen/Qualified Alien</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_HVisit_Number_Count__c</fullName>
        <label>HVisit Number Count</label>
        <summarizedField>Activity__c.BRI_HVisit_Number__c</summarizedField>
        <summaryForeignKey>Activity__c.BRI_Household__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BRI_Home_Visit_Count__c</fullName>
        <description>Home Visit Count would be returning number of the HomeVisit per household</description>
        <label>Home Visit Count</label>
        <summaryForeignKey>Activity__c.BRI_Household__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BRI_Homeless_Status__c</fullName>
        <label>Homeless Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Homeless</fullName>
                </value>
                <value>
                    <fullName>Not Homeless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Housing_Specify__c</fullName>
        <label>Housing Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Housing_Stability__c</fullName>
        <label>Housing Stability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Housing_Status__c</fullName>
        <label>Housing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Homeless</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owns home</fullName>
                </value>
                <value>
                    <fullName>Rents</fullName>
                </value>
                <value>
                    <fullName>Shares Apartment/Home with Family</fullName>
                </value>
                <value>
                    <fullName>Shares Apartment/Home with Friend</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Income_Situation__c</fullName>
        <label>Income Situation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Informal_Inkind_Support_Amount__c</fullName>
        <label>Informal Inkind Support Amount</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Insurance_ID__c</fullName>
        <label>Insurance ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Insurance_TGT_Child__c</fullName>
        <label>Insurance TGT Child</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Interest_Amount__c</fullName>
        <label>Interest Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Is_Reliable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reliable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRI_Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Low_Achievement__c</fullName>
        <label>Low Achievement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_MLearn__c</fullName>
        <label>MLearn</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_MMEB__c</fullName>
        <label>MMEB</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_MPhysical__c</fullName>
        <label>MPhysical</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRI_Military__c</fullName>
        <label>Military</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Reserve</fullName>
                </value>
                <value>
                    <fullName>Veteran</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_NT_Child_Dev_Delay__c</fullName>
        <label>Non-target Child Dev Delay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_NT_Child_Low_Achievement__c</fullName>
        <label>Non-target Child Low Achievement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Other_Support_Amount__c</fullName>
        <label>Other Support Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_PC_Use_Tobacco_Or_Smoke__c</fullName>
        <label>Primary Caregiver Use Tobacco Or Smoke</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>UnKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_PRelation__c</fullName>
        <label>PRelation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Parent_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Pension_Amount__c</fullName>
        <label>Pension Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Percent_Poverty_Level__c</fullName>
        <label>% Poverty Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>125</fullName>
                </value>
                <value>
                    <fullName>133</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>175</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>225</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>301</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Primary_Caretaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Caretaker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Program_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Executive</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Program Executive)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Program_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Program Manager)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRI_Referral_Date__c</fullName>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRI_Referral_Type__c</fullName>
        <label>Referral Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Refferal_Specify__c</fullName>
        <label>Refferal Specify</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Regular_Payments__c</fullName>
        <label>Regular Payments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Reliable_Transportation__c</fullName>
        <label>Reliable Transportation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_SSI_Amount__c</fullName>
        <label>SSI Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_S_O_Name__c</fullName>
        <label>S/O Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_S_O_Phone__c</fullName>
        <label>S/O Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Same_Address__c</fullName>
        <label>Same Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRI_Screen_Type__c</fullName>
        <label>Screen Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Social_Security_Amount__c</fullName>
        <label>Social Security Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_State_ID__c</fullName>
        <label>State ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Street_1__c</fullName>
        <label>Street 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Street_2__c</fullName>
        <label>Street 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Street_3__c</fullName>
        <label>Street 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Supervisor_Review__c</fullName>
        <label>Supervisor Review</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_TANF_Amount__c</fullName>
        <label>TANF Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_TANF_Eligible_Individual__c</fullName>
        <label>TANF Eligible Individual</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult 1</fullName>
                </value>
                <value>
                    <fullName>Adult 2</fullName>
                </value>
                <value>
                    <fullName>TGT</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Tenant_Rent_Amount__c</fullName>
        <label>Tenant Rent Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Tobacco_Use_In_Home__c</fullName>
        <label>Tobacco Use In Home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Total_Adult_home__c</fullName>
        <label>Total Adult / home</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Total_Child_MOB_Responsible__c</fullName>
        <label>Total Children Parent is Responsible For</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Total_Child_home__c</fullName>
        <label>Total Child /home</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Total_in_family__c</fullName>
        <label>Total in family</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRI_Tracking__c</fullName>
        <label>Tracking</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRI_Transfer_Family__c</fullName>
        <label>Transfer Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Transportation_Access__c</fullName>
        <label>Transportation Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Has no source of transportation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owns car / Leases car</fullName>
                </value>
                <value>
                    <fullName>Relies on family member or friend with car</fullName>
                </value>
                <value>
                    <fullName>Relies on household member with car</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Uses public transportation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Type_Housing__c</fullName>
        <label>Type Housing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Homeless</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owns home</fullName>
                </value>
                <value>
                    <fullName>Rents</fullName>
                </value>
                <value>
                    <fullName>Shares Apartment/Home with Family</fullName>
                </value>
                <value>
                    <fullName>Shares Apartment/Home with Friend</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRI_Un_Employment_Amount__c</fullName>
        <label>Un Employment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_Veteran_Amount__c</fullName>
        <label>Veteran Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_WIC_Amount__c</fullName>
        <label>WIC Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BRI_WIC_Eligible__c</fullName>
        <label>WIC Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child Eligible Only</fullName>
                </value>
                <value>
                    <fullName>Not WIC Eligible</fullName>
                </value>
                <value>
                    <fullName>Prenatal Eligible Only</fullName>
                </value>
                <value>
                    <fullName>Prenatal/Postpartum and Child Eligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>